# weaveconfig

./: .prototools  Cargo.toml  LICENCE-MIT  README.md  biome.json  proto-plugin.toml  schema.json  spec.md
.github/workflows/: releases.yml
example/: README.md  bun.lockb  copy_this.txt  index.ts
example/envoyr/: _env.json  _space.jsonc  _test.env.json
example/envoyr/testing/nested/test/: _space.json
example/weaveconfig/: _env.json  _space.jsonc  copy_this.txt
example/weaveconfig/testing/nested/test/: _env.jsonc  _space.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: ancestor_mapping.rs  apply_resolved.rs  file_graph.rs  get_environment_value.rs  graph.rs  lib.rs  map_path.rs  merging.rs  parse_jsonc.rs  resolve_spaces.rs  schemas.rs  serialize_env.rs  space_graph.rs  spaces.rs  template_value.rs  upper_snake_case.rs  write_env_file.rs  write_json_file.rs
src/template_file/: integer.rs  mod.rs  segment.rs
src/ts_binding/: bun.lockb  format_ts.rs  format_ts_type.rs  generate_binding.rs  global.d.ts  mod.rs  multi_env.ts  one_env.ts  package.json  tsconfig.json  zero_env.ts
