[package]
name = "envoyr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
arbitrary = { version = "1.3.2", features = ["derive"] }
clap = { version = "4.5.18", features = ["cargo"] }
fjson = "0.3.1"
futures = "0.3.30"
lexical = "7.0.2"
serde = { version = "1.0.210", features = ["derive"] }
serde-hjson = "1.1.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.4" }

[workspace]
members = ["fuzz"]

[profile.release]
opt-level = 3
lto = "thin"
debug = true

[profile.release.package.envoyr]
opt-level = 1
debug = true
