[package]
name = "weaveconfig"
version = "0.1.0"
edition = "2021"
description = "A unified configuration tool for monorepos"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JeremyMoeglich/Weaveconfig"

[dependencies]
anyhow = "1.0.89"
biome_formatter = "0.5.7"
biome_js_formatter = "0.5.7"
biome_js_parser = "0.5.7"
biome_js_syntax = "0.5.7"
clap = { version = "4.5.18", features = ["cargo", "derive"] }
fjson = "0.3.1"
futures = "0.3.30"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.4" }

[profile.release]
opt-level = 3
lto = "thin"
debug = true

[profile.release.package.weaveconfig]
opt-level = 1
debug = true
